# aws-manga-library

./: DEPLOYMENT.md  FIXES_SUMMARY.md
.claude/: settings.local.json
manga-scraper/: PROJECT_STRUCTURE.md
manga-scraper/frontend/: READER_FEATURES.md  next.config.js  package.json
manga-scraper/frontend/src/app/: globals.css  layout.tsx  page.tsx  reader.css
manga-scraper/frontend/src/app/manga/[id]/[chapter]/: page.tsx
manga-scraper/frontend/src/components/providers/: ThemeProvider.tsx  index.ts
manga-scraper/frontend/src/components/reader/: MangaReader.tsx  PageViewer.tsx  ProgressTracker.tsx  ReaderControls.tsx  index.ts
manga-scraper/frontend/src/types/: api.ts  chapter.ts  manga.ts
manga-scraper/scraper/: .flake8  .pylintrc  Dockerfile.lambda  INDEX.md  PROJECT_SUMMARY.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
manga-scraper/scraper/lambda/: handler.py  requirements.txt
manga-scraper/scraper/scripts/: deploy.sh  example_usage.py  setup_aws.sh
manga-scraper/scraper/src/: __init__.py  config.py  manga_scraper.py
manga-scraper/scraper/src/models/: __init__.py  chapter.py  manga.py
manga-scraper/scraper/src/processors/: __init__.py  duplicate_detector.py  image_processor.py
manga-scraper/scraper/src/scrapers/: __init__.py  base_scraper.py  mangadex_scraper.py  mangakakalot_scraper.py
manga-scraper/scraper/src/storage/: __init__.py  dynamodb_manager.py  s3_storage.py
manga-scraper/scraper/src/utils/: __init__.py  logger.py  rate_limiter.py  retry_handler.py
manga-scraper/scraper/tests/: __init__.py  conftest.py  test_image_processor.py  test_manga_scraper.py  test_storage.py
manga-scraper/scraper/tests/integration/: __init__.py  test_aws_integration.py  test_end_to_end.py
manga-scraper/scripts/deploy/: deploy-frontend.sh  deploy-lambda.sh  rollback.sh
manga-scraper/scripts/maintenance/: backup-database.sh  clean-old-images.sh  update-dependencies.sh
manga-scraper/scripts/monitoring/: check-health.sh  generate-report.sh
manga-scraper/scripts/setup/: create-aws-resources.sh  init-database.sh  install-dependencies.sh
